finally position sticky for sider bar is working ! overflow-x : hidden; on a parent element was the issue !! wtf !

--- a/scss/sprayloc_style.scss
+++ b/scss/sprayloc_style.scss
@@ -22,7 +22,7 @@
 
 #main-wrapper {
   position: relative;
-  overflow-x: hidden;
+
 }
 #sprayloc-container {
   display: grid;
@@ -95,9 +95,13 @@ body {
   }
   #folders-bar {
     grid-area: folders;
+    position: relative;
 
     & .wrapper {
-      display: flex;
+      position: sticky;
+      top : 100px;
+
+      display: flex;  
       flex-wrap: wrap;
       flex-direction: row;
       // outline: 1px solid pink;
@@ -105,6 +109,7 @@ body {
 
       margin: 0 2em;
       width: auto;
+      height : auto;
       min-width: 150px;
       // max-width: 800px;
 
@@ -175,7 +180,7 @@ body {
       width : 100%;
 
 
-      @media screen and( max-width: $breakpoint-medium) {
+      @media screen and ( max-width: $breakpoint-medium) {
         display: none;
       }
     }
@@ -194,7 +199,7 @@ body {
         padding-left : 1em;
       }
 
-      @media screen and( min-width: $breakpoint-medium) {
+      @media screen and ( min-width: $breakpoint-medium) {
         display: none;
       }
     }
@@ -1118,7 +1123,7 @@ body {
       }
     }
   }
-  @media screen and(min-width: $collapse-breakpoint) {
+  @media screen and (min-width: $collapse-breakpoint) {
     transform: translateX(-100%);
   }
 }
@@ -1584,7 +1589,7 @@ li{
     }
   }
 }
-@media screen and( min-width:950px){
+@media screen and ( min-width:950px){
   #materiel_wrapper{
     grid-template-columns: 600px 350px;
     grid-template-areas: 
